fix: internal-pages - remove ScrollTrigger.killAll() for page transition when the user look at horizontal scroll

--- a/src/app.css
+++ b/src/app.css
@@ -53,6 +53,10 @@
     @apply h-dvh bg-black;
   }
 
+  img {
+    user-select: none;
+  }
+
   *::selection {
     @apply bg-[#FDF003] text-black;
   }
